--- a/nginx/html/cloud/mystyles.css
+++ b/nginx/html/cloud/mystyles.css
@@ -24,7 +24,7 @@
     font-size: 30px;
     margin-left: auto;
     margin-right: auto;
-    width: 500px;;
+    width: 500px;
     margin-top: 50px;
 }
 
