--- a/nginx/html/cloud/mystyles.css
+++ b/nginx/html/cloud/mystyles.css
@@ -67,3 +67,41 @@
 	.margin-left: auto;
 	.margin-right: auto;
 }
+
+.error-info-label {
+	width: 250px;
+	height: 50px;
+	margin-right: auto;
+	margin-left: auto;
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+
+.options {
+	margin-left: auto;
+   margin-right: auto;
+   margin-top: 20px;;
+   width: 250px;
+   font-family: monospace;
+}
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
+ 
