--- a/nginx/html/cloud/mystyles.css
+++ b/nginx/html/cloud/mystyles.css
@@ -1,4 +1,14 @@
+.files_to_upload {
+	font-family: monospace;
+	width: 250px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
+}
 
+.upload_form {
+	font-family: monospace;
+}
 
 .table-style {
 	width: 500px;
